# lazy-worklog-tracker

./: .gitignore  LICENSE  README.md  db.db  pyproject.toml
src/: app.py  app.spec  lazy-worklog-tracker.spec  plugin_loader.py
src/abstract/: interfaces.py
src/lazy_worklog_tracker/: app.py  config.py  main.py  plugin_loader.py  worklogscreen.py
src/lazy_worklog_tracker/css/: new-worklog-screen.tcss  worklogscreen.tcss
src/plugins/: logging_plugin.py  sqlite_repository.py
