[project]
name = "lazy-worklog-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "EASYept",email = "bybl1k@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lazy_worklog_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
