[project]
name = "lazy-worklog-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "EASYept",email = "bybl1k@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dependency-injector (>=4.48.2,<5.0.0)",
    "textual (>=6.5.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "lazy_worklog_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
